--- a/index.html
+++ b/index.html
@@ -5,9 +5,29 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1">
 		<meta name="color-scheme" content="dark light">
-		<meta name="description" content="Jonathan Shemer's Homepage">
-		<meta name="keywords" content="jonathan, shemer, entrepreneur, development, backend">
 		<meta name="author" content="Jonathan Shemer">
+		<!-- Primary Meta Tags -->
+		<title>Jonathan Shemer - Profile</title>
+		<meta name="title" content="Jonathan Shemer - Profile">
+		<meta name="description" content="CTO and Co-Founder of Ancillary Streams Ltd.">
+		<meta name="keywords" content="jonathan, shemer, entrepreneur, development, backend">
+		<!-- Open Graph / Facebook -->
+		<meta property="og:type" content="website">
+		<meta property="og:url" content="https://jonathanshemer.com/">
+		<meta property="og:title" content="Jonathan Shemer - Profile">
+		<meta property="og:description" content="CTO and Co-Founder of Ancillary Streams Ltd.">
+		<meta property="og:image" content="https://www.jonathanshemer.com/cover.png">
+		<!-- Twitter -->
+		<meta property="twitter:card" content="summary_large_image">
+		<meta property="twitter:url" content="https://metatags.io/">
+		<meta property="twitter:title" content="Jonathan Shemer - Profile">
+		<meta property="twitter:description" content="CTO and Co-Founder of Ancillary Streams Ltd.">
+		<meta property="twitter:image" content="https://www.jonathanshemer.com/cover.png">
+		<!-- favicons -->
+		<link rel="apple-touch-icon" sizes="180x180" href="/apple-touch-icon.png">
+		<link rel="icon" type="image/png" sizes="32x32" href="/favicon-32x32.png">
+		<link rel="icon" type="image/png" sizes="16x16" href="/favicon-16x16.png">
+		<link rel="shortcut icon" href="/favicon.ico">
 		<style>
 			body {
 			  	font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto, Helvetica, Arial, sans-serif, "Apple Color Emoji", "Segoe UI Emoji", "Segoe UI Symbol";
