--- a/index.html
+++ b/index.html
@@ -7,20 +7,20 @@
 		<meta name="color-scheme" content="dark light">
 		<meta name="author" content="Jonathan Shemer">
 		<!-- Primary Meta Tags -->
-		<title>Jonathan Shemer - Profile</title>
-		<meta name="title" content="Jonathan Shemer - Profile">
+		<title>Jonathan Shemer</title>
+		<meta name="title" content="Jonathan Shemer">
 		<meta name="description" content="CTO and Co-Founder of Ancillary Streams Ltd.">
 		<meta name="keywords" content="jonathan, shemer, entrepreneur, development, backend">
 		<!-- Open Graph / Facebook -->
 		<meta property="og:type" content="website">
 		<meta property="og:url" content="https://jonathanshemer.com/">
-		<meta property="og:title" content="Jonathan Shemer - Profile">
+		<meta property="og:title" content="Jonathan Shemer">
 		<meta property="og:description" content="CTO and Co-Founder of Ancillary Streams Ltd.">
 		<meta property="og:image" content="https://www.jonathanshemer.com/cover.png">
 		<!-- Twitter -->
 		<meta property="twitter:card" content="summary_large_image">
 		<meta property="twitter:url" content="https://metatags.io/">
-		<meta property="twitter:title" content="Jonathan Shemer - Profile">
+		<meta property="twitter:title" content="Jonathan Shemer">
 		<meta property="twitter:description" content="CTO and Co-Founder of Ancillary Streams Ltd.">
 		<meta property="twitter:image" content="https://www.jonathanshemer.com/cover.png">
 		<!-- favicons -->
